# research-assistant

./: .gitignore  README.md  ask.py  common.py  critique.py  env.example  evidence.py  generate_final_docx.py  ideas.py  mermaid_figures.py  pyproject.toml  requirements.txt  run_agentic.py  run_review.py  setup.sh  start.sh  verify.py  zot.py
.github/workflows/: tests.yml
agentic/: bridge.py  docx_export.py  orchestrator.py  pipeline_runner.py  quick_ai_score.py  section_parser.py  state_store.py  text_cleanup.py  web_server.py
agentic/agents/: literature_researcher.py
agentic/mcp_servers/: chart_server.py  google_search_server.py
agentic/prompts/: assessor.py  plagiarism.py  rewriter.py  writer.py  writer_review.py
agentic/ui/: dashboard.py
docs/superpowers/plans/: 2026-05-24-plan-a-ux-clarity-and-originality.md
docs/superpowers/specs/: 2026-05-24-langgraph-agentic-pipeline-design.md  2026-05-29-outline-recommender-design.md
research_assistant/: __init__.py  common.py  pipeline.py  researcher.py
research_assistant/research/: __init__.py  ask.py  compare.py  discover.py  evidence.py  zot.py
research_assistant/verification/: __init__.py  audit.py  claim_verify.py  external_match.py  originality.py  paraphrase_check.py  verify.py
research_assistant/web/: __init__.py  app.py  desktop.py  tool_runner.py
research_assistant/web/static/: app.js  style.css
research_assistant/web/templates/: _result.html  ask.html  ask_library.html  base.html  compare.html  error.html  index.html  index_setup.html  library_search.html  outline_recommender.html  paper_discovery.html  providers.html  sessions.html  tools.html  writing_studio.html
research_assistant/web/templates/macros/: ui.html
research_assistant/workspace/: projects.py
research_assistant/writing/: __init__.py  coherence.py  critic.py  critique.py  disclose.py  ideas.py  outline.py  outline_recommender.py  paraphrase.py
scripts/: check_zerogpt.py  generate_charts.py  generate_final_docx.py  mermaid_figures.py  performance_benchmark.py  render_mermaid.py  run_agentic.py  run_review.py  runtime_accuracy_analysis.py  workflow_diagram.py
tests/: conftest.py  test_audit.py  test_claim_verify.py  test_coherence.py  test_common_cli.py  test_critique.py  test_disclose.py  test_discover.py  test_originality_cli.py  test_outline_recommender.py  test_paraphrase.py  test_paraphrase_check.py  test_projects_active.py  test_quick_ai_score.py  test_researcher.py  test_text_cleanup.py  test_verify.py
tests/verification/: test_external_match.py  test_originality.py
tests/web/: test_dashboard_descriptions.py  test_field_help_coverage.py  test_tools_template.py
